--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "8.2.6",
     "@angular/platform-browser-dynamic": "8.2.6",
     "@angular/router": "8.2.6",
+    "@material/button": "^3.2.0",
     "angular-calendar": "0.21.3",
     "chart.js": "2.5.0",
     "classlist.js": "1.1.20150312",
