--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "8.2.6",
     "@auth0/angular-jwt": "^3.0.1",
     "@material/button": "^3.2.0",
+    "@swimlane/ngx-datatable": "^16.0.2",
     "angular-calendar": "0.21.3",
     "chart.js": "2.5.0",
     "classlist.js": "1.1.20150312",
