--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng2-dragula": "1.3.1",
     "ng2-file-upload": "1.2.1",
     "ng2-validation": "4.2.0",
+    "ngx-json-viewer": "^2.4.0",
     "ngx-quill": "2.0.4",
     "perfect-scrollbar": "0.7.1",
     "rxjs": "6.5.3",
