--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ng2-validation": "4.2.0",
     "ngx-json-viewer": "^2.4.0",
     "ngx-quill": "2.0.4",
+    "ngx-take-until-destroy": "^5.4.0",
     "perfect-scrollbar": "0.7.1",
     "rxjs": "6.5.3",
     "tslib": "^1.10.0",
